# alfred

./: .gitignore  AGENTS.md  README.md  build_demo.sh  clip.json  lyrics.json  pyproject.toml  saturday_night.lrc  saturday_night.sid  saturday_night.sng  script_demo
.github/workflows/: ci.yml
clips/: README.md
clips/bjork/: clip.json  lyrics.json  segments.json
clips/freed/: README.md  freed-from-desire.lrc  lyrics.json
clips/saturday/: README.md  clip.json  segments.json  sid_build.cmd
clips/saturday/koala/: img04.kla  img05.kla  img06.kla  img07.kla  img08.kla  img10.kla  img11.kla  img12.kla  img13.kla  img14.kla  img15.kla
clips/the_sign/: README.md  clip.json  lyrics.json  picks.json  segments.json  sid_build.cmd  the_sign.lrc  the_sign.sid  the_sign.sng
clips/the_sign/koala/: img00.kla  img01.kla  img02.kla  img03.kla  img04.kla  img05.kla  img06.kla  img07.kla  img08.kla  img09.kla  img10.kla  img11.kla  img12.kla  img13.kla  img14.kla  img15.kla  img16.kla  img17.kla  (+3 more)
docs/: LESSONS.md  NEWCLIP.md
koala/: img00.kla  img01.kla  img02.kla  img03.kla  img04.kla  img05.kla  img06.kla  img07.kla  img08.kla  img09.kla  img10.kla  img11.kla  img12.kla  img13.kla  img14.kla  img15.kla  img16.kla  img17.kla  img18.kla
src/: lyric_fade.asm  lyric_n.asm  lyriceng.asm  p00.asm  p00_efo.asm  p01.asm  p01_efo.asm  p02.asm  p02_efo.asm  p03.asm  p03_efo.asm  p04.asm  p04_efo.asm  p05.asm  p05_efo.asm  p06.asm  p06_efo.asm  p07.asm  p07_efo.asm  p08.asm  p08_efo.asm  p09.asm  p09_efo.asm  p10.asm  p10_efo.asm  p11.asm  p11_efo.asm  p12.asm  p12_efo.asm  p13.asm  p13_efo.asm  p14.asm  p14_efo.asm  p15.asm  p15_efo.asm  p16.asm  p16_efo.asm  p17.asm  p17_efo.asm  p18.asm  (+9 more)
tests/: test_clips.py  test_koala.py  test_lrc.py
tools/: README.md  gen_candidates.py  gen_parts.py  lrc_to_lyrics.py  lyric_assets.py  photo_to_koala.py  render_demo.py  segment.py  use_clip.sh
